# lettuce

./: .gitignore  README.md  compose-vector-db.yml  install_requirements.sh  pyproject.toml  release.config.js
.github/: dependabot.yml
.github/workflows/: check.container-build.yml  check.pr-title.yaml  check.run-tests.yml  deploy.docs.yml  release.dev-base.yml  release.dev-weights.yml  release.dev.yml  release.yml
AI Assistant/: app.py  requirements.txt
AI Assistant/chain/: chains.py  memory.py  models.py  prompts.py
AI Assistant/options/: base_options.py
AI Assistant/templates/: html_templates.py
AI Assistant/utils/: utils.py
Carrot-Assistant/: .dockerignore  .env.example  README.md  app.py  assistant.py  compose.yaml  config.py  csv_input.py  environment.yml  evaluate_file.py  example_output.json  install_requirements.sh  pyproject.toml  requirements.txt  text_input.py  ui.py  ui_utilities.py
Carrot-Assistant/OBS/: init_db.sql
Carrot-Assistant/components/: embeddings.py  models.py  pipeline.py  prompt.py
Carrot-Assistant/evaluation/: PartialTestingOMOPConcepts.xlsx  call_methods.py  concept_calculation.py  concept_extraction.py  eval.py  eval_data_loaders.py  eval_main.py  eval_tests.py  evaltypes.py  metrics.py  pipelines.py  process.py
Carrot-Assistant/evaluation/eval_utils/: logs.py
Carrot-Assistant/evaluation/logs/: evaluation_log_2024-08-27_10-58-12.txt
Carrot-Assistant/omop/: OMOP_match.py  omop_models.py
Carrot-Assistant/options/: base_options.py  eval_options.py  pipeline_options.py
Carrot-Assistant/routers/: pipeline_routes.py
Carrot-Assistant/tests/: test_db.py  test_evals.py  test_preprocess.py  test_prompt_build.py
Carrot-Assistant/utils/: logging_utils.py
Lettuce/: Dockerfile  README.md  api.py  app.py  assistant.py  csv_input.py  embedding_results.json  evaluate_file.py  example_output.json  pyproject.toml  requirements.txt  test_embedding_eval.py  test_rag_pipeline.py  ui.py  ui_utilities.py
Lettuce/cli/: __init__.py
Lettuce/components/: embeddings.py  models.py  pipeline.py  prompt.py  result.py
Lettuce/evaluation/: eval_tests.py  metrics.py  pipelines.py
Lettuce/evaluation/datasets/: example.csv
Lettuce/omop/: OMOP_match.py  db_manager.py  omop_models.py  omop_queries.py  preprocess.py
Lettuce/options/: base_options.py  pipeline_options.py
Lettuce/routers/: pipeline_routes.py
Lettuce/tests/: test_db.py  test_evals.py  test_preprocess.py  test_prompt_build.py
Lettuce/utils/: logging_utils.py  utils.py
RAG/: constant.py  main.py
RAG/llm/: agents.py  chains.py  models.py  prompts.py
RAG/options/: base_option.py  rag_option.py
RAG/preprocessing/: embeddings_const.py  vectors.py
RAG/utils/: utils.py
build-embeddings/: README.md  main.py  pyproject.toml
build-embeddings/embedding_utils/: concept_readers.py  db_utils.py  embedder.py  fetch_concept_batches.py  protocols.py  save_embedding.py  string_building.py
build-embeddings/tests/: test_string_builder.py
build-embeddings/tests/integration/: test_integration_csv.py  test_integration_database.py
build-embeddings/tests/test_data/: CONCEPT.csv
build-embeddings/tests/unit/: test_concept_readers.py  test_db_connector.py  test_embedder.py  test_embedding_store.py  test_string_builder.py
build-embeddings/utils/: fetch_concept_batches.py  string_building.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html
docs/.doctrees/: environment.pickle  usage.doctree
docs/.doctrees/autoapi/: index.doctree
docs/_sources/: usage.rst.txt
docs/autoapi/: index.html
docs/autoapi/OMOP_match/: index.html
docs/autoapi/app/: index.html
docs/autoapi/assistant/: index.html
docs/autoapi/base_options/: index.html
docs/autoapi/csv_input/: index.html
docs/autoapi/ui/: index.html
lettuce/: .dockerignore  .env.compose  Dockerfile  Dockerfile.azure  Dockerfile.model  README.md  api.py  assistant.py  compose.yaml  pyproject.toml  requirements.txt  text_input.py
lettuce-docs/: embedding_models.rst  large_language_models.rst  usage.rst
lettuce-docs/autoapi/: index.rst
lettuce-ui/: README.md  main.py  pyproject.toml  search-results.csv  ui.py
lettuce-ui/layouts/: ui.grid.json
lettuce-ui/src/: ui.py  ui_launcher.py
lettuce-ui/src/search/: __init__.py
lettuce-ui/src/suggestions/: __init__.py
lettuce-ui/src/tests/: test_choosing_results.py  test_ui_utils.py
lettuce-ui/src/ui_utils/: __init__.py
lettuce/OBS/: omop.sh
lettuce/api/: requests.py  responses.py
lettuce/api_models/: requests.py  responses.py
lettuce/cli/: main.py
lettuce/components/: embeddings.py  models.py  pipeline.py  prompt.py  prompt_templates.py  result.py
lettuce/components/models/: __init__.py  connect.py  local_models.py
lettuce/evaluation/: eval_data_loaders.py  eval_tests.py  metrics.py  pipelines.py
lettuce/evaluation/datasets/: EU_test_set.csv
lettuce/omop/: OMOP_match.py  db_manager.py  omop_match.py  omop_models.py  omop_queries.py
lettuce/options/: base_options.py  pipeline_options.py
lettuce/routers/: pipeline_routes.py  search_routes.py
lettuce/tests/: test_cli.py  test_db.py  test_evals.py  test_models.py
lettuce/tests/e2e/: test_cli.py  test_cli_e2e.py
lettuce/tests/integration/: test_embeddings_db.py  test_omop_match_db.py  test_omop_query_db.py
lettuce/tests/test_data/: acetaminophen_embedding_bgesmall.csv
lettuce/tests/unit/: test_api_auth.py  test_cli.py  test_embeddings.py  test_models.py  test_omop_match.py  test_prompt_build.py  test_search_api.py
lettuce/utils/: logging_utils.py
llettuce-docs/: Makefile  conf.py  embedding_models.rst  index.rst
llettuce-docs/autoapi/: index.rst
vector-db/: Dockerfile  create_snapshot.py  load_embeddings.py
vector_db/: README.md  load_embedding_strings.py  load_embeddings.py  multiple_parquet.sh
website/: next.config.mjs  package-lock.json  package.json  theme.config.jsx
website/pages/: _meta.js  api_reference.mdx  branding.mdx  deployment.mdx  index.mdx  omop_ts_quickstart.mdx  quickstart.mdx
(+177 files in other folders)
