[project]
name = "lettuce-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "lettuce",
    "marimo>=0.16.5",
    "polars>=1.34.0",
    "ruff>=0.14.0",
    "sentence-transformers>=5.1.1",
]

[tool.uv.sources]
lettuce = { workspace = true }

[project.scripts]
lettuce-ui = "ui_launcher:main"
