[project]
name = "lettuce"
version = "0.1.0"
description = "An LLM assistant for mapping OMOP concepts"
authors = [{name = "James Mitchell White", email = "mbzjim@exmail.notingham.ac.uk"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12",
    "haystack-ai>=2.7.0",
    "huggingface-hub>=0.24.6",
    "numpy==1.26.4",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "sse-starlette>=2.1.3",
    "psycopg2-binary>=2.9.9",
    "rapidfuzz>=3.9.6",
    "SQLAlchemy>=2.0.32",
    "sseclient-py>=1.8.0",
    "fastembed-haystack>=1.2.0",
    "torch==2.2",
    "sentence-transformers>=3.3.1",
    "pgvector==0.3.6",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.0",
    "ollama-haystack>=4.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3", 
    "coverage>=7.6.12", 
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0"
]
llama-cpu = [
  "llama-cpp-python>=0.2.89",
  "llama-cpp-haystack>=1.0"
]
llama-gpu = [
  "llama-cpp-python>=0.2.89",
  "llama-cpp-haystack>=1.0"
]

[tool.uv.sources]
llama-cpp-python = [
  { index = "llama-cpp-cpu", extra = "llama-cpu" },
  { index = "llama-cpp-gpu-metal", extra = "llama-gpu", marker = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
  { index = "llama-cpp-gpu-cuda", extra = "llama-gpu", marker = "platform_system == 'Linux'" },
  { index = "llama-cpp-gpu-cuda", extra = "llama-gpu", marker = "platform_system == 'Windows'" },
  { index = "pypi" },
]

[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"

[[tool.uv.index]]
name = "llama-cpp-gpu-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"

[[tool.uv.index]]
name = "llama-cpp-gpu-cuda"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lettuce-cli = "cli.main:app"
lettuce-api = "api:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
